--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -13,13 +13,20 @@
 
 <body>
     <div id="app">Loading...</div>
-
+    <p>Loading content from the API: <b id="name">...</b></p>
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script>
+        (async function () {
+            const { text } = await (await fetch(`../../api/message`)).json();
+            document.querySelector('#name').textContent = text;
+        }())
+    </script>
+
 </body>
 
 </html>
